Chỉnh sửa Delete

--- a/20T1020413.Web/Views/Product/Delete.cshtml
+++ b/20T1020413.Web/Views/Product/Delete.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Giá hàng:</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static">@Model.Price</p>
+                    <p class="form-control-static">@Model.Price.ToString("0.00")</p>
                 </div>
             </div>
 
