--- a/20T1020413.Web/Views/Product/Create.cshtml
+++ b/20T1020413.Web/Views/Product/Create.cshtml
@@ -16,6 +16,7 @@
                 <label class="control-label col-sm-2">Tên mặt hàng:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="ProductName" value="@Model.ProductName" autofocus>
+                    @Html.ValidationMessageFor(m => m.ProductName, "", new { @style = "color:#f00;" })
                 </div>
             </div>
 
@@ -39,6 +40,7 @@
                 <label class="control-label col-sm-2">Đơn vị tính:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="Unit" value="@Model.Unit" autofocus>
+                    @Html.ValidationMessageFor(m => m.Unit, "", new { @style = "color:#f00;" })
                 </div>
             </div>
 
@@ -46,6 +48,7 @@
                 <label class="control-label col-sm-2">Giá hàng:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="Price" value="@Model.Price">
+                    @Html.ValidationMessageFor(m => m.Price, "", new { @style = "color:#f00;" })
                 </div>
             </div>
 
