--- a/20T1020413.Web/Views/Product/Edit.cshtml
+++ b/20T1020413.Web/Views/Product/Edit.cshtml
@@ -22,6 +22,7 @@
                 <label class="control-label col-sm-2">Tên mặt hàng:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="ProductName" value="@Model.ProductName" autofocus>
+                    @Html.ValidationMessageFor(m => m.ProductName, "", new { @style = "color:#f00;" })
                 </div>
             </div>
 
@@ -45,6 +46,7 @@
                 <label class="control-label col-sm-2">Đơn vị tính:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="Unit" value="@Model.Unit" autofocus>
+                    @Html.ValidationMessageFor(m => m.Unit, "", new { @style = "color:#f00;" })
                 </div>
             </div>
 
@@ -52,6 +54,7 @@
                 <label class="control-label col-sm-2">Giá hàng:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="Price" value="@Model.Price.ToString("0.00")">
+                    @Html.ValidationMessageFor(m => m.Price, "", new { @style = "color:#f00;" })
                 </div>
             </div>
 
@@ -67,7 +70,7 @@
 
             <div class="form-group">
                 <div class="col-lg-offset-2 col-sm-10">
-                    <img src="~/Photo/@Model.Photo" class="img img-bordered" style="width:150px" />
+                    <img src="~/Photo/@Model.Photo" id="photo" class="img img-bordered" style="width:150px" />
                 </div>
             </div>
 
@@ -127,7 +130,7 @@
                             <a class="btn btn-xs btn-primary" href="~/product/photo/edit/@item.ProductID/@item.PhotoID">
                                 <i class="fa fa-edit"></i>
                             </a>
-                            <a class="btn btn-xs btn-danger" href="~/product/photo/@item.ProductID/@item.PhotoID" onclick="return confirm('Xóa ảnh của mặt hàng hay không?')">
+                            <a class="btn btn-xs btn-danger" href="~/product/photo/delete/@item.ProductID/@item.PhotoID" onclick="return confirm('Xóa ảnh của mặt hàng hay không?')">
                                 <i class="fa fa-trash-o"></i>
                             </a>
                         </td>
