--- a/20T1020413.Web/Views/Product/Photo.cshtml
+++ b/20T1020413.Web/Views/Product/Photo.cshtml
@@ -44,7 +44,9 @@
 
             <div class="form-group">
                 <div class="col-lg-offset-2 col-sm-10 checkbox">
-                    <label><input type="checkbox" name="IsHidden" value="@Model.IsHidden">Ẩn ảnh (không hiển thị với khách hàng)</label>
+                    <label>
+                        @Html.CheckBoxFor(m => m.IsHidden) Ẩn ảnh (không hiển thị với khách hàng)
+                    </label>
                 </div>
             </div>
 
