--- a/20T1020413.Web/Views/Order/Create.cshtml
+++ b/20T1020413.Web/Views/Order/Create.cshtml
@@ -33,7 +33,7 @@
             <div id="searchResult">
             </div>
         </div>
-                
+
         <div class="col-md-8">
             <!-- Giỏ hàng -->
             <h4>Danh sách mặt hàng đã chọn</h4>
@@ -89,7 +89,7 @@
             </table>
             <div class="text-right">
                 <a href="~/Order/ClearCart" class="btn btn-sm btn-danger" onclick="confirm('Có muốn xóa giỏ hàng không?')">
-                   <i class="fa fa-trash"></i> Xóa giỏ hàng
+                    <i class="fa fa-trash"></i> Xóa giỏ hàng
                 </a>
             </div>
 
@@ -109,18 +109,26 @@
                     </div>
                     <div class="col-md-6">
                         <label>Nhân viên phụ trách:</label>
-                        <select class="form-control" name="employeeID">
-                            <option value="0">-- Chọn nhân viên --</option>
-                            @foreach (var item in _20T1020413.BusinessLayers.CommonDataService.ListOfEmployees(""))
-                            {
-                                <option value="@item.EmployeeID">@item.FirstName @item.LastName</option>
-                            }
-                        </select>
+                        @{ var userAccount = Converter.CookieToUserAccount(User.Identity.Name);}
+                        <div class="col-sm-10"  style="padding:0;">
+                            <input type="text"
+                                   class="form-control"
+                                   id="Fullname"
+                                   name="Fullname"
+                                   value="@userAccount.FullName" disabled>
+                        </div>
+                        @*<select class="form-control" name="employeeID">
+                                <option value="0">-- Chọn nhân viên --</option>
+                                @foreach (var item in _20T1020413.BusinessLayers.CommonDataService.ListOfEmployees(""))
+                                {
+                                    <option value="@item.EmployeeID">@item.FirstName @item.LastName</option>
+                                }
+                            </select>*@
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-12 text-right">
-                        <button type="submit" class="btn btn-sm btn-primary">Lập đơn hàng</button>                        
+                        <button type="submit" class="btn btn-sm btn-primary">Lập đơn hàng</button>
                     </div>
                 </div>
             </form>
