--- a/20T1020413.Web/Views/Order/Search.cshtml
+++ b/20T1020413.Web/Views/Order/Search.cshtml
@@ -17,7 +17,7 @@
                 <th>Nhân viên phụ trách</th>
                 <th>Thời điểm duyệt</th>
                 <th>Người giao hàng</th>
-                <th>ngày nhận giao hàng</th>
+                <th>Ngày nhận giao hàng</th>
                 <th>Thời điểm kết thúc</th>
                 <th>Trạng thái</th>
                 <th style="width:40px"></th>
@@ -28,12 +28,12 @@
             {
                 <tr>
                     <td>@item.CustomerName</td>
-                    <td>@item.OrderTime</td>
+                    <td>@(item.OrderTime == null ? " " : item.OrderTime.ToString("dd/MM/yyyy H:mm"))</td>
                     <td>@item.EmployeeFullName</td>
-                    <td>@item.AcceptTime</td>
+                    <td>@(item.AcceptTime == null ? " " : item.AcceptTime.Value.ToString("dd/MM/yyyy H:mm"))</td>
                     <td>@item.ShipperName</td>
-                    <td>@item.ShippedTime</td>
-                    <td>@item.FinishedTime</td>
+                    <td>@(item.ShippedTime == null ? " " : item.ShippedTime.Value.ToString("dd/MM/yyyy H:mm"))</td>
+                    <td>@(item.FinishedTime == null ? " " : item.FinishedTime.Value.ToString("dd/MM/yyyy H:mm"))</td>
                     <td>@item.StatusDescription</td>
                     <td>
                         <a href="~/Order/Details/@item.OrderID" class="btn btn-info btn-xs">
