--- a/20T1020413.Web/Views/Product/Attribute.cshtml
+++ b/20T1020413.Web/Views/Product/Attribute.cshtml
@@ -10,7 +10,7 @@
     <div class="box-body">
         <form class="form-horizontal" action="~/Product/SaveAttribute" method="post">
             @Html.AntiForgeryToken()
-
+            @Html.HiddenFor(m=>m.ProductID)
             @Html.HiddenFor(m => m.AttributeID)
             <div class="form-group">
                 <label class="control-label col-sm-2">Tên thuộc tính:</label>
