--- a/20T1020413.Web/Views/Order/Details.cshtml
+++ b/20T1020413.Web/Views/Order/Details.cshtml
@@ -1,32 +1,104 @@
 ﻿@model _20T1020413.Web.Models.OrderModel
 @{
     ViewBag.Title = "Quản lý đơn hàng";
+    string errorMessage = ViewBag.ErrorMessage.ToString();
+    string successMessage = ViewBag.SuccessMessage.ToString();
 }
 
 <div class="box box-primary">
     <div class="box-header text-right">
+        @if (!string.IsNullOrWhiteSpace(errorMessage))
+        {
+            <div class="alert alert-warning alert-dismissible">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>Lỗi!</strong> @errorMessage
+            </div>
+        }
+        @if (!string.IsNullOrWhiteSpace(successMessage))
+        {
+            <div class="alert alert-success alert-dismissible">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                @successMessage
+            </div>
+        }
         <div class="btn-group">
             <!-- //TODO
-            YÊU CẦU: Đối với các chức năng liên quan đến đơn hàng, chỉ được hiển thị menu/nút của những chức năng
-            phù hợp với trạng thái hiện tại của đơn hàng (ví dụ: Nếu đơn hàng chưa được chấp nhận thì không được chuyển để giao hàng)
-            -->
+        YÊU CẦU: Đối với các chức năng liên quan đến đơn hàng, chỉ được hiển thị menu/nút của những chức năng
+        phù hợp với trạng thái hiện tại của đơn hàng (ví dụ: Nếu đơn hàng chưa được chấp nhận thì không được chuyển để giao hàng)
+        -->
             <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">
+                @*<button type="button" id="btn" runat="server" class="btn btn-sm btn-primary dropdown-toggle select-button" data-toggle="dropdown">
                     Xử lý đơn hàng <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
+                </button>*@
+                @{
+                    if (Model.Status == -1 || Model.Status == -2)
+                    {
+                        <button type="button" id="btn" runat="server" class="btn btn-sm btn-primary dropdown-toggle select-button" data-toggle="dropdown" disabled>
+                            Xử lý đơn hàng <span class="caret"></span>
+                        </button>
+                        <a href="~/Order/Delete/@Model.OrderID" class="btn btn-sm btn-danger" onclick="return confirm('Có chắc chắn muốn xóa đơn hàng này không?')"><i class="fa fa-trash"></i> Xóa đơn hàng</a>
+                    }
+                }
+                @{
+                    if (Model.Status == 4)
+                    {
+                        <button type="button" id="btn" runat="server" class="btn btn-sm btn-primary dropdown-toggle select-button" data-toggle="dropdown" disabled>
+                            Xử lý đơn hàng <span class="caret"></span>
+                        </button>
+                    }
+                }
+                @{
+                    if (Model.Status == 1)
+                    {
+                        <button type="button" id="btn" runat="server" class="btn btn-sm btn-primary dropdown-toggle select-button" data-toggle="dropdown">
+                            Xử lý đơn hàng <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="~/Order/Accept/@Model.OrderID" onclick="return confirm('Xác nhận duyệt chấp nhận đơn hàng này?')">Duyệt đơn hàng</a></li>
+                            <li><a href="~/Order/Reject/@Model.OrderID" onclick="return confirm('Xác nhận từ chối đơn hàng này?')">Từ chối đơn hàng</a></li>
+                            <li><a href="~/Order/Cancel/@Model.OrderID" onclick="return confirm('Xác nhận hủy đơn hàng này?')">Hủy đơn hàng</a></li>
+                        </ul>
+
+                    }
+                }
+                @{
+                    if (Model.Status == 2)
+                    {
+                        <button type="button" id="btn" runat="server" class="btn btn-sm btn-primary dropdown-toggle select-button" data-toggle="dropdown">
+                            Xử lý đơn hàng <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="~/Order/SelectShipper/@Model.OrderID" class="btn-modal">Chuyển giao hàng</a></li>
+                            <li><a href="~/Order/Cancel/@Model.OrderID" onclick="return confirm('Xác nhận hủy đơn hàng này?')">Hủy đơn hàng</a></li>
+                        </ul>
+                    }
+                }
+                @{
+                    if (Model.Status == 3)
+                    {
+                        <button type="button" id="btn" runat="server" class="btn btn-sm btn-primary dropdown-toggle select-button" data-toggle="dropdown">
+                            Xử lý đơn hàng <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="~/Order/Finish/@Model.OrderID" onclick="return confirm('Xác nhận đơn hàng đã hoàn tất thành công?')">Xác nhận hoàn tất đơn hàng</a></li>
+                            <li><a href="~/Order/Cancel/@Model.OrderID" onclick="return confirm('Xác nhận hủy đơn hàng này?')">Hủy đơn hàng</a></li>
+                        </ul>
+                    }
+                }
+                @*<ul class="dropdown-menu" role="menu">
                     <li><a href="~/Order/Accept/@Model.OrderID" onclick="return confirm('Xác nhận duyệt chấp nhận đơn hàng này?')">Duyệt đơn hàng</a></li>
                     <li><a href="~/Order/Shipping/@Model.OrderID" class="btn-modal">Chuyển giao hàng</a></li>
                     <li><a href="~/Order/Finish/@Model.OrderID" onclick="return confirm('Xác nhận đơn hàng đã hoàn tất thành công?')">Xác nhận hoàn tất đơn hàng</a></li>
                     <li class="divider"></li>
                     <li><a href="~/Order/Cancel/@Model.OrderID" onclick="return confirm('Xác nhận hủy đơn hàng này?')">Hủy đơn hàng</a></li>
                     <li><a href="~/Order/Reject/@Model.OrderID" onclick="return confirm('Xác nhận từ chối đơn hàng này?')">Từ chối đơn hàng</a></li>
-                </ul>
+                </ul>*@
             </div>
-            <a href="~/Order/Delete/@Model.OrderID" class="btn btn-sm btn-danger" onclick="return confirm('Có chắc chắn muốn xóa đơn hàng này không?')"><i class="fa fa-trash"></i> Xóa đơn hàng</a>
+
             <a href="~/Order" class="btn btn-sm btn-info">Quay lại</a>
         </div>
     </div>
+    
     <div class="box-body form-horizontal">
         <div class="form-group">
             @Html.AntiForgeryToken()
@@ -36,7 +108,8 @@
             </div>
             <label class="control-label col-sm-2">Ngày lập đơn hàng:</label>
             <div class="col-sm-4">
-                <p class="form-control-static">@Model.OrderTime</p>
+
+                <p class="form-control-static">@(Model.OrderTime == null ? "" : Model.OrderTime.ToString("dd/MM/yyyy H:mm"))</p>
             </div>
             <label class="control-label col-sm-2">Nhân viên phụ trách:</label>
             <div class="col-sm-4">
@@ -44,7 +117,7 @@
             </div>
             <label class="control-label col-sm-2">Ngày nhận đơn hàng:</label>
             <div class="col-sm-4">
-                <p class="form-control-static">@Model.AcceptTime</p>
+                <p class="form-control-static">@(Model.AcceptTime == null ? "" : Model.AcceptTime.Value.ToString("dd/MM/yyyy H:mm"))</p>
             </div>
         </div>
 
@@ -78,7 +151,7 @@
             </div>
             <label class="control-label col-sm-2">Nhận giao hàng lúc:</label>
             <div class="col-sm-4">
-                <p class="form-control-static">@Model.ShippedTime</p>
+                <p class="form-control-static">@(Model.ShippedTime == null ? "" : Model.ShippedTime.Value.ToString("dd/MM/yyyy H:mm"))</p>
             </div>
         </div>
 
@@ -89,7 +162,7 @@
             </div>
             <label class="control-label col-sm-2">Thời điểm hoàn tất:</label>
             <div class="col-sm-4">
-                <p class="form-control-static">@Model.FinishedTime</p>
+                <p class="form-control-static">@(Model.FinishedTime == null ? "" : Model.FinishedTime.Value.ToString("dd/MM/yyyy H:mm"))</p>
             </div>
         </div>
     </div>
@@ -113,28 +186,39 @@
                     @{ int i = 0;
                         foreach (var item in Model.DataDetails)
                         {
-                        <tr>
-                            <td class="text-center">
-                                @{ 
-                                    i++;
-                                }
-                                @i
-                            </td>
-                            <td>@item.ProductName</td>
-                            <td class="text-center">@item.Unit</td>
-                            <td class="text-center">@item.Quantity</td>
-                            <td class="text-right">@item.SalePrice</td>
-                            <td class="text-right">@item.TotalPrice</td>
-                            <td class="text-right">
-                                <a href="~/Order/EditDetail/@item.OrderID/@item.ProductID" class="btn btn-xs btn-primary btn-modal">
-                                    <i class="fa fa-edit"></i>
-                                </a>
-                                <a href="~/Order/DeleteDetail/@item.OrderID/@item.ProductID" class="btn btn-xs btn-danger" onclick="return confirm('Xóa mặt hàng này khỏi đơn hàng?')">
-                                    <i class="fa fa-trash"></i>
-                                </a>
-                            </td>
-                        </tr>
-                                        } }
+                            <tr>
+                                <td class="text-center">
+                                    @{
+                                        i++;
+                                    }
+                                    @i
+                                </td>
+                                <td>@item.ProductName</td>
+                                <td class="text-center">@item.Unit</td>
+                                <td class="text-center">@item.Quantity</td>
+                                <td class="text-right">@item.SalePrice.ToString("0.00")</td>
+                                <td class="text-right">@item.TotalPrice.ToString("0.00")</td>
+                                <td class="text-right">
+                                    @*<a href="~/Order/EditDetail/@item.OrderID/@item.ProductID" class="btn btn-xs btn-primary btn-modal">
+                                            <i class="fa fa-edit"></i>
+                                        </a>
+                                        <a href="~/Order/DeleteDetail/@item.OrderID/@item.ProductID" class="btn btn-xs btn-danger" onclick="return confirm('Xóa mặt hàng này khỏi đơn hàng?')">
+                                            <i class="fa fa-trash"></i>
+                                        </a>*@
+                                    @{
+                                        if (Model.Status == 1 || Model.Status == 2)
+                                        {
+                                            <a href="~/Order/EditDetail/@item.OrderID/@item.ProductID" class="btn btn-xs btn-primary btn-modal">
+                                                <i class="fa fa-edit"></i>
+                                            </a>
+                                            <a href="~/Order/DeleteDetail/@item.OrderID/@item.ProductID" class="btn btn-xs btn-danger" onclick="return confirm('Xóa mặt hàng này khỏi đơn hàng?')">
+                                                <i class="fa fa-trash"></i>
+                                            </a>
+                                        }
+                                    }
+                                </td>
+                            </tr>
+                        } }
                 </tbody>
                 <tfoot>
                     <tr>
@@ -147,7 +231,7 @@
                                     sum += item.TotalPrice;
                                 }
                             }
-                            @sum
+                            @sum.ToString("0.00")
                         </th>
                         <th></th>
                     </tr>
