--- a/20T1020413.Web/Views/Order/EditDetail.cshtml
+++ b/20T1020413.Web/Views/Order/EditDetail.cshtml
@@ -1,11 +1,13 @@
 ﻿@model _20T1020413.DomainModels.OrderDetail
 @{
     Layout = null;
+
 }
 
 <div class="modal-dialog">    
     <div class="modal-content">
-        <form action="~/Order/UpdateDetail" method="post" class="form-horizontal" enctype="multipart/form-data">
+        
+        <form id="formEditDetail" action="~/Order/UpdateDetail" method="post" class="form-horizontal">
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.ProductID)
             @Html.HiddenFor(m => m.OrderID)
@@ -29,7 +31,8 @@
                 <div class="form-group">
                     <label class="control-label col-sm-3">Số lượng:</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" name="Quantity" value="@Model.Quantity" />
+                        @*<input type="text" class="form-control" name="Quantity" value="@Model.Quantity" />*@
+                        <input class="form-control" type="number" value="@Model.Quantity" min="1" name="Quantity" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -38,8 +41,9 @@
                         <input type="text" class="form-control" name="SalePrice" value="@Model.SalePrice" />
                     </div>
                 </div>
+                <div id="errMsg" class="col-sm-10" style="color: #f00;text-align:center;"></div>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" style="float:none;">
                 <button type="submit" class="btn btn-primary">
                     <i class="fa fa-floppy-o"></i> Cập nhật
                 </button>
@@ -50,4 +54,35 @@
         </form>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+
+        $("#formEditDetail").submit(function (e) {
+            e.preventDefault();
+
+            var url = $(this).prop("action");
+            var postData = $(this).serializeArray();
+
+            $.ajax({
+                url: url,
+                type: "POST",
+                data: postData,
+                error: function () {
+                    alert("Your request is not valid!");
+                },
+                success: function (data) {
+                    if (data.Code === 1) {
+                        window.location.reload();
+                    }
+                    else {
+                        $("#errMsg").html(data.Message);
+                    }
+                }
+            });
+        });
+
+    });
+</script>
+
 
